# stobo

./: .editorconfig  .gitignore  README.md  jsconfig.json  meson.build  package.json  removeThis.js
build-aux/: com.github.kinten108101.Stobo.json
build-aux/modules/: blueprint-compiler.json
data/: app.desktop  app.gschema.xml  meson.build
docs/: CodingStyle.rst  List.rst
scripts/: meson-install.sh
src/: add.blp  addonControls.blp  addonDetails.blp  ambient.d.ts  app.js  application.js  bin.js  error.js  main.js  matcher.blp  meson.build  preferences.blp  style-dark.css  style.css  toml-write.js  typing.d.ts  window.blp  window.js
src/classes/: documentChooser.js  embed.js  index.js  profileBar.js  stoboColumn.js
src/functionComponents/: headerbox.js  profileBar.blp  profileBar.js  profilePopover.blp  stoboColumnView.js  stoboProfile.js
src/legacy/: headerbox.js
src/legacy/lib/: bind.js  properties.js
src/lib/: builder-fmtstr.js  builder.js  delayMs.js  fast-toml.js  file.js  fileDisplay.js  fileIO.js  functional.js  iconWithBadge.js  signals.js  themeselector.blp  themeselector.js
src/services/: status.js  steamworks.js
xattr-editor/: init.py  meson.build
xattr-editor/data/: app.desktop  meson.build
